THRIFT-3650 incorrect union serialization Client: Compiler (general) Patch: Jens Geyer

This closes #881